--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,84 +1,98 @@
-@import url('https://fonts.bunny.net/css2?family=Quicksand:wght@300..700&display=swap');
-
-
 :root {
-  --primary: #737373;
-  --secondary: rgb(143, 197, 251);
-  --secondary-hover: #161616;
-  --max-width: 47rem;
-  --text-color: #ffffff;
-  --background-color: #252525;
-  --link-color: #353535;
+  --primary: rgb(231, 231, 231);
+  --secondary: rgb(245, 250, 255);
+  --secondary-hover: rgba(41, 7, 191, 0.1);
+  --max-width: 56rem;
 }
 
 * {
   box-sizing: border-box;
 }
 
-span, tr td {
-  color: var(--text-color);
+span {
+  color: #333;
 }
 
 .center {
   display: block;
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
   width: 30vh;
   height: 10vh;
 }
 
+tr td {
+  color: #333;
+}
+
 header {
   padding: 0 !important;
-  margin-bottom: 1rem;
 }
 
-.infoText, .content {
-  background-color: var(--background-color);
-  color: var(--text-color);
+.infoText,
+.content {
+  background-color: #eee;
+  color: #333;
   padding: 10px;
   margin-bottom: 10px;
-  border: 1px solid var(--primary);
-  border-radius: 0.25rem
+  border: 1px solid #000;
 }
 
-.banner a span, .banner span {
+.banner a span,
+.banner span {
   color: #eee !important;
   margin-bottom: 5px !important;
 }
 
-body, header h1 {
-  color: var(--text-color);
-  font-family: 'Quicksand', sans-serif;
+body,
+header h1 {
+  color: var(--primary);
+}
+
+body {
+  font-family: 'Comic Sans MS', sans-serif;
   -webkit-text-size-adjust: 100%;
   text-align: left;
   margin: 1rem;
-  background-color: var(--link-color);
+  background-color: #558fda;
 }
 
 input {
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Comic Sans MS', sans-serif;
 }
 
-.main, header, footer {
+.main,
+header,
+footer {
   margin: auto;
   max-width: var(--max-width);
   line-height: 1.3;
 }
 
-header.desc, header h1 .hl {
-  color: var(--primary);
+header {
+  margin-bottom: 1rem;
 }
 
-code, header .desc, header h1 {
-  margin: 0;
+header.desc,
+header h1 .hl {
+  color: #000;
 }
 
 code {
-  color: var(--background-color);
+  color: #000;
+}
+
+header .desc,
+header h1 {
+  margin: 0;
 }
 
 footer {
   margin-top: 1rem;
   font-size: 0.9rem;
+}
+
+footer .footer-text {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -87,25 +101,11 @@ footer {
 table {
   width: 100%;
   border-spacing: 0;
-  border-collapse: separate;
+  border-collapse: collapse;
   overflow-x: auto;
-  border: 1px solid var(--primary);
-  border-radius: 0.25rem;
 }
 
-td {
-  border: solid 1px var(--primary);
-  border-style: none;
-  padding: 0.25rem;
-}
-
-tr:last-child td:first-child { border-bottom-left-radius: 0.25rem; }
-tr:last-child td:last-child { border-bottom-right-radius: 0.25rem; }
-
-tr:first-child td { border-top-style: solid; }
-
-.all-tags, .tagsList:not(td) {
-  margin: 1rem 0;
+.all-tags {
   text-align: center;
 }
 
@@ -117,23 +117,32 @@ tr:first-child td { border-top-style: solid; }
   flex-wrap: wrap;
 }
 
-.tagTitle, .tagsList li {
+:not(td) > .tagsList:not(.single) {
+  justify-content: center;
+}
+
+:not(td) > .tagsList {
+  margin: 1rem 0;
+}
+
+.tagTitle,
+.tagsList li {
   display: inline-block;
   color: var(--secondary);
-  border: 0.1px solid var(--primary);
+  border: 0.1px solid #000;
   padding: 0.1em 0.4rem;
 }
 
 .tagsList li a {
+  text-decoration: none;
   color: #eee;
 }
 
-a {
-  text-decoration: none;
+.chroma {
+  margin: 0;
 }
 
-.chroma:not(.lntd) {
-  margin: 0;
+:not(.lntd) > .chroma {
   padding: 0.3rem;
 }
 
@@ -148,28 +157,22 @@ blockquote {
   border-left: 0.25em solid var(--secondary);
 }
 
-.tableList td, .tableList th {
+.tableList td,
+.tableList th {
   padding: 0.35rem 0.4rem;
   width: 50%;
 }
 
+td a {
+  color: #333 !important;
+}
+
 a {
-  color: var(--text-color);
-  text-shadow: 0 0 3px var(--text-color);
+  text-decoration: none;
 }
 
-a:hover {
-  text-shadow: 0 0 5px var(--text-color);
-  -webkit-transition: background-color 0.15s ease-in;
-  -ms-transition: background-color 0.15s ease-in;
-  transition: text-shadow 0.15s ease-in;
-}
-
-a:not(:hover) {
-  text-shadow: 0 0 3px var(--text-color);
-  -webkit-transition: background-color 0.15s ease-in;
-  -ms-transition: background-color 0.15s ease-in;
-  transition: text-shadow 0.15s ease-in;
+tr {
+  border: 1px solid #000;
 }
 
 .tableList tr:hover td {
@@ -177,12 +180,15 @@ a:not(:hover) {
 }
 
 .tagsList li {
-  background-color: var(--background-color);
-  border-radius: 0.25rem;
+  background-color: #558fda;
+}
+
+.tagsList li a {
+  color: #eee !important;
 }
 
 #tableListBody {
-  background-color: var(--background-color);
+  background-color: var(--primary);
 }
 
 :not(pre) > code {
@@ -194,8 +200,9 @@ header h1 img {
   height: 1.5rem;
 }
 
-.content table td, .content table th {
-  border: 1px solid var(--primary);
+.content table td,
+.content table th {
+  border: 1px solid #000;
 }
 
 .content .gist table td {
@@ -210,8 +217,12 @@ img {
   max-width: 100%;
 }
 
-.chroma .hl, .chroma table.lntable {
+.chroma .hl {
   display: flex;
+}
+
+.chroma table.lntable {
+  display: block;
 }
 
 .chroma .lntable .lntd:last-of-type {
